--- a/Hackthon/cloudbuild-be.yaml
+++ b/Hackthon/cloudbuild-be.yaml
@@ -6,7 +6,7 @@ steps:
         'build',
         '-t',
         'us-central1-docker.pkg.dev/intense-subject-470817-v2/hackathon-be/backend:${COMMIT_SHA}',
-        './Backend'
+        './Hackthon/Backend'
       ]
 
   # Step 2: Push the image to Artifact Registry
