--- a/Hackthon/Backend/Dockerfile
+++ b/Hackthon/Backend/Dockerfile
@@ -1,26 +1,21 @@
-# Use official Python slim image
+# Use official Python image
 FROM python:3.11-slim
 
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies (ffmpeg + build essentials if needed)
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    ffmpeg \
-    gcc \
-    && rm -rf /var/lib/apt/lists/*
+# Install system dependencies (ffmpeg, etc.)
+RUN apt-get update && apt-get install -y ffmpeg && rm -rf /var/lib/apt/lists/*
 
-# Copy Python dependencies
+# Copy requirements and install
 COPY requirements.txt .
-
-# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
+# Copy app code
 COPY . .
 
-# Expose port (Cloud Run expects 8080)
+# Expose port (not strictly needed for Cloud Run, but good practice)
 EXPOSE 8080
 
-# Run FastAPI with Uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+# Run FastAPI with Uvicorn, binding to Cloud Run's $PORT
+CMD exec uvicorn Backend.agents.ingestion_structuring_agent:app --host 0.0.0.0 --port $PORT
