--- a/Hackthon/Backend/Dockerfile
+++ b/Hackthon/Backend/Dockerfile
@@ -1,21 +1,21 @@
 # Use official Python image
 FROM python:3.11-slim
 
-# Set working directory
+# Set working directory inside container
 WORKDIR /app
 
 # Install system dependencies (ffmpeg, etc.)
 RUN apt-get update && apt-get install -y ffmpeg && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements and install
+# Copy requirements and install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy app code
-COPY . .
+# Copy Backend folder into container
+COPY Backend ./Backend
 
-# Expose port (not strictly needed for Cloud Run, but good practice)
+# Expose port
 EXPOSE 8080
 
-# Run FastAPI with Uvicorn, binding to Cloud Run's $PORT
-CMD exec uvicorn Backend.agents.ingestion_structuring_agent:app --host 0.0.0.0 --port $PORT
+# Run FastAPI app with Uvicorn
+CMD ["uvicorn", "Backend.agents.ingestion_structuring_agent:app", "--host", "0.0.0.0", "--port", "${PORT:-8080}"]
