--- a/Hackthon/Backend/Dockerfile
+++ b/Hackthon/Backend/Dockerfile
@@ -9,12 +9,12 @@ RUN apt-get update && apt-get install -y ffmpeg && rm -rf /var/lib/apt/lists/*
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy all backend code
+# Copy backend code
 COPY . /app/Backend
 
-# Expose port
+# Expose port (Cloud Run uses $PORT)
 EXPOSE 8080
 ENV PORT=8080
 
-# Run FastAPI app
-CMD ["sh", "-c", "uvicorn Backend.agents.ingestion_structuring_agent:app --host 0.0.0.0 --port $PORT"]
+# Run FastAPI app (shell form so $PORT expands)
+CMD uvicorn Backend.agents.ingestion_structuring_agent:app --host 0.0.0.0 --port ${PORT:-8080}
