--- a/Hackthon/Frontend/startup-evaluation/package.json
+++ b/Hackthon/Frontend/startup-evaluation/package.json
@@ -16,6 +16,9 @@
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-scripts": "5.0.1",
+    "react-speech-kit": "^3.0.1",
+    "react-speech-recognition": "^4.0.1",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
